vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__constant_declaration-2.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::constant_declaration,\n\"constant C1,C2,C3: std_ulogic := '0';\")"
---
ConstantDeclaration
  Keyword(Constant)
  IdentifierList
    Identifier 'C1'
    Comma
    Identifier 'C2'
    Comma
    Identifier 'C3'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'std_ulogic'
  InitialValue
    ColonEq
    NameExpression
      Name
        NameDesignatorPrefix
          CharacterLiteral ''0''
  SemiColon
