vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__constant_declaration.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::constant_declaration, \"constant C1: std_ulogic;\")"
---
ConstantDeclaration
  Keyword(Constant)
  IdentifierList
    Identifier 'C1'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'std_ulogic'
  SemiColon
