vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__file_declaration-2.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::file_declaration, \"file f, ff, fff : natural;\")"
---
FileDeclaration
  Keyword(File)
  IdentifierList
    Identifier 'f'
    Comma
    Identifier 'ff'
    Comma
    Identifier 'fff'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'natural'
  SemiColon
