vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__file_declaration-3.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::file_declaration,\n\"file f_path: bit is \\\"./path_to_file.txt\\\";\")"
---
FileDeclaration
  Keyword(File)
  IdentifierList
    Identifier 'f_path'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'bit'
  FileOpenInformation
    Keyword(Is)
    NameExpression
      Name
        NameDesignatorPrefix
          StringLiteral '"./path_to_file.txt"'
  SemiColon
