vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__file_declaration-4.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::file_declaration,\n\"file f_path: bit open WRITE_MODE is \\\"./path_to_file.txt\\\";\")"
---
FileDeclaration
  Keyword(File)
  IdentifierList
    Identifier 'f_path'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'bit'
  FileOpenInformation
    FileOpenKind
      Keyword(Open)
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'WRITE_MODE'
    Keyword(Is)
    NameExpression
      Name
        NameDesignatorPrefix
          StringLiteral '"./path_to_file.txt"'
  SemiColon
