vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__file_declaration.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::file_declaration, \"file v1: bit;\")"
---
FileDeclaration
  Keyword(File)
  IdentifierList
    Identifier 'v1'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'bit'
  SemiColon
