vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__parses_optional_expression.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::constant_declaration, \"constant foo : natural := 0;\")"
---
ConstantDeclaration
  Keyword(Constant)
  IdentifierList
    Identifier 'foo'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'natural'
  InitialValue
    ColonEq
    LiteralExpression
      AbstractLiteral '0'
  SemiColon
