vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__signal_declaration-2.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::signal_declaration, \"signal s, ss, sss : natural := 1;\")"
---
SignalDeclaration
  Keyword(Signal)
  IdentifierList
    Identifier 's'
    Comma
    Identifier 'ss'
    Comma
    Identifier 'sss'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'natural'
  InitialValue
    ColonEq
    LiteralExpression
      AbstractLiteral '1'
  SemiColon
