vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__signal_declaration-3.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::signal_declaration, \"signal reg_s: bit register;\")"
---
SignalDeclaration
  Keyword(Signal)
  IdentifierList
    Identifier 'reg_s'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'bit'
  Keyword(Register)
  SemiColon
