vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__signal_declaration-4.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::signal_declaration, \"signal bus_s: bit bus := '0';\")"
---
SignalDeclaration
  Keyword(Signal)
  IdentifierList
    Identifier 'bus_s'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'bit'
  Keyword(Bus)
  InitialValue
    ColonEq
    NameExpression
      Name
        NameDesignatorPrefix
          CharacterLiteral ''0''
  SemiColon
