vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__signal_declaration.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::signal_declaration, \"signal s1: bit;\")"
---
SignalDeclaration
  Keyword(Signal)
  IdentifierList
    Identifier 's1'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'bit'
  SemiColon
